tests/support/validation/invalid/trip_with_timepoints_out_of_order/trip_patterns.ppat
PPAT;   04;Inbound   ; 4;04_iv_2   ;north ;hayms ;dvsta ;atlst ;sosta ;seasl ;trade ;bmipk ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;